# entitlements-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: entitlements.py
tests/: test_entitlements.py
